# argolid

./: .gitattributes  CMakeLists.txt  README.md  setup.cfg  setup.py
.github/workflows/: publish_pypi.yml  wheel_build.yml
ci-utils/: install_prereq_linux.sh  install_prereq_win.bat
src/: chunked_base_to_pyr_gen.cpp  chunked_base_to_pyr_gen.h  chunked_pyramid_assembler.cpp  chunked_pyramid_assembler.h  ome_tiff_to_chunked_converter.cpp  ome_tiff_to_chunked_converter.h  ome_tiff_to_chunked_pyramid.cpp  ome_tiff_to_chunked_pyramid.h  pyramid_view.cpp  pyramid_view.h  utilities.cpp  utilities.h  zarr_pyramid_assembler.cpp
src/cpp/core/: chunked_base_to_pyr_gen.cpp  chunked_base_to_pyr_gen.h  chunked_pyramid_assembler.cpp  chunked_pyramid_assembler.h  ome_tiff_to_chunked_converter.cpp  ome_tiff_to_chunked_converter.h  ome_tiff_to_chunked_pyramid.h  pyramid_view.cpp  pyramid_view.h
src/cpp/interface/: pyramid_python_interface.cpp
src/cpp/ts_driver/tiled_tiff/: omexml.cc  tiled_tiff_key_value_store.cc
src/cpp/utilities/: downsample.h  utilities.cpp
src/python/: pyramid_python_interface.cpp
src/python/argolid/: __init__.py  _version.py  dimension_stacking.py  pyramid_compositor.py  pyramid_generator.py  volume_generator.py
src/ts_driver/tiled_tiff/: omexml.cc  tiled_tiff_key_value_store.cc
tests/: main.cpp
tests/python/: test.py  test_read.py
